Update before CRAN Submission

--- a/WSGeometry.Rcheck/WSGeometry/html/00Index.html
+++ b/WSGeometry.Rcheck/WSGeometry/html/00Index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>R: Compute Wasserstein Barycenters, Geodesics, PCA and Distances
-and Kantorovich-Rubinstein Distances and Barycenter</title>
+<head><title>R: Compute Wasserstein Barycenters, Geodesics, PCA and Distances as
+well as Kantorovich-Rubinstein Distances and Barycenter</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body><div class="container">
-<h1> Compute Wasserstein Barycenters, Geodesics, PCA and Distances
-and Kantorovich-Rubinstein Distances and Barycenter
+<h1> Compute Wasserstein Barycenters, Geodesics, PCA and Distances as
+well as Kantorovich-Rubinstein Distances and Barycenter
 <img class="toplogo" src="../../../doc/html/Rlogo.svg" alt="[R logo]" />
 </h1>
 <hr/>
@@ -34,7 +34,7 @@ and Kantorovich-Rubinstein Distances and Barycenter
 <tr><td style="width: 25%;"><a href="grid_positions.html">grid_positions</a></td>
 <td>Generate a 2d grid in [0,1]^2 of given size.</td></tr>
 <tr><td style="width: 25%;"><a href="kr_bary.html">kr_bary</a></td>
-<td>Solves the (2,C)-Barycenter problem between N measures of possibly unequal mass on R^d.</td></tr>
+<td>Solves the (2,C)-Barycenter problem between N measures of possibly unequal total mass on R^d.</td></tr>
 <tr><td style="width: 25%;"><a href="kr_dist.html">kr_dist</a></td>
 <td>Compute the p-Kantorovich-Rubinstein distance between two measures of possibly unequal total mass.</td></tr>
 <tr><td style="width: 25%;"><a href="location_scatter_bary.html">location_scatter_bary</a></td>
